making menu be a percentage vs a fixed value allows menu to size smaller on iphone

--- a/app.component.css
+++ b/app.component.css
@@ -181,7 +181,7 @@ button {
 #center_the_menu {
   margin: auto; /* True Center */
   /* margin: 0 0 0 26%; /* Skewed center */
-  width: 500px;
+  width: 40%;
   padding: 0px; 
   border: 3px solid purple; 
 }
